--- a/docs-2.0/2.quick-start/6.cheatsheet-for-ngql.md
+++ b/docs-2.0/2.quick-start/6.cheatsheet-for-ngql.md
@@ -228,9 +228,9 @@
   | Retrieve vertices              | `LOOKUP ON player WHERE player.name == "Tony Parker" YIELD player.name AS name, player.age AS age` | The following example returns vertices whose `name` is `Tony Parker` and the tag is `player`. |
   | Retrieve edges              | `LOOKUP ON follow WHERE follow.degree == 90 YIELD follow.degree` | Returns edges whose `degree` is `90` and the edge type is `follow`.  |
   | List vertices with a tag   | `LOOKUP ON player YIELD properties(vertex),id(vertex)`          | Shows how to retrieve the VID of all vertices tagged with `player`.                |
-  | List edges with an edge types | `LOOKUP ON like YIELD edge AS e`              | Shows how to retrieve the source Vertex IDs, destination vertex IDs, and ranks of all edges of the `like` edge type.          |
+  | List edges with an edge types | `LOOKUP ON follow YIELD edge AS e`              | Shows how to retrieve the source Vertex IDs, destination vertex IDs, and ranks of all edges of the `follow` edge type.          |
   | Count the numbers of vertices or edges              | `LOOKUP ON player YIELD id(vertex)| YIELD COUNT(*) AS Player_Count`          | Shows how to count the number of vertices tagged with `player`.                        |
-  | Count the numbers of edges              | `LOOKUP ON like YIELD id(vertex)| YIELD COUNT(*) AS Like_Count`               | Shows how to count the number of edges of the `like` edge type.                     |
+  | Count the numbers of edges              | `LOOKUP ON follow YIELD edge as e| YIELD COUNT(*) AS Like_Count`               | Shows how to count the number of edges of the `follow` edge type.                     |
 
 
 
